<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorGreyText"
    android:orientation="vertical"
    tools:context="com.rt7mobilereward.app.WelcomePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreyText"
        android:orientation="vertical"
        android:layout_weight="3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:layout_gravity="center"
            android:src="@drawable/philly_pretzel_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGreyText"
            android:textColor="@color/colorWhite"
            android:layout_weight="0.075"
            android:text="@string/str_welcomepage_text_1"
            android:textStyle="bold"
            android:gravity="bottom|center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGreyText"
            android:textColor="@color/colorWhite"
            android:layout_weight="0.075"
            android:text="@string/str_welcomepage_text_2"
            android:textStyle="bold"
            android:gravity="top|center" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreyText"
        android:layout_weight="4">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreyText"
        android:orientation="vertical"
        android:layout_weight="1">



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/welcomepage_btn_shape"
                android:textColor="@color/colorWhite"
                android:text="@string/str_join_now"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:onClick="ButtonOnClick"
                android:id="@+id/join_now"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/welcomepage_btn_shape"
                android:textColor="@color/colorWhite"
                android:text="@string/str_sign_in"
                android:id="@+id/sign_in"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:onClick="ButtonOnClick"
                android:layout_weight="1"
                style="?android:attr/borderlessButtonStyle"/>






    </LinearLayout>

</LinearLayout>
